--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,9 @@
               </div>
             </div>
 
-            <div class='search'></div>
+            <div class='search'>
+                {{> search}} 
+            </div>
             
         </ul>
 
