--- a/views/featured.hbs
+++ b/views/featured.hbs
@@ -36,5 +36,5 @@
 </article>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVCbPS40tAPyjYaLF3gXNtEz3mOARG5Wo&callback=initMap"></script>
-<script src="assets/js/gmap.js"></script>
+<script defer src="assets/js/gmap.js"></script>
 
