--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,15 +5,18 @@
 <title>Coelho Properties</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css">
+
 <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 <link rel="stylesheet" href="assets/css/main.css" />
 <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 
-
 <link rel="stylesheet" href="assets/css/modal.css" />
 <link rel="stylesheet" href="assets/css/featured.css" />
 <link rel="stylesheet" href="assets/css/about.css" />
+
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
@@ -86,7 +89,6 @@
 
 
 
-<script src="assets/js/include.js"></script>
 <!--<script src="assets/js/main.js"></script>-->
 
 <script src="assets/js/main.js"></script>
