--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -6,7 +6,7 @@
       <span class="close x"></span>
       <!--<svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none"><rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect></svg>-->
 
-      <form action="http://idx.mlspin.com/rslts.asp" method="get" id="formId" target="_blank" onsubmit="return Form_Validator(this)" name="TheForm" language="JavaScript">
+      <form action="http://localhost:3000/results" method="get" id="formId" target="_blank" onsubmit="return Form_Validator(this)" name="TheForm" language="JavaScript">
 
 
 	<input type="hidden" name="aid" value="CN211748" /> 
