--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,13 +5,26 @@
 <title>Coelho Properties</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+</head>
+
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css">
 
 <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-<link rel="stylesheet" href="assets/css/main.css" />
 <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
+
+{{#if results}} 
+ <!-- <link rel="stylesheet" href="assets/css/main.css" /> -butcher this one? -->
+ 
+{{else}} 
+  <link rel="stylesheet" href="assets/css/main.css" />
+{{/if}} 
+
+
 
 <link rel="stylesheet" href="assets/css/modal.css" />
 <link rel="stylesheet" href="assets/css/featured.css" />
@@ -29,7 +42,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
 <!--<script language="javascript" src="./PropertySearch_files/soldSearch.js"></script>-->
 
-</head>
 
 <body {{#if home}} class="landing" {{/if}}>
 
