--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,32 +12,32 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css">
 
-<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
+<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+<!--[if lte IE 9]><link rel="stylesheet" href="../assets/css/ie9.css" /><![endif]-->
 
 
 {{#if results}} 
- <!-- <link rel="stylesheet" href="assets/css/main.css" /> -butcher this one? -->
+ <!-- <link rel="stylesheet" href="../assets/css/main.css" /> -butcher this one? -->
  
 {{else}} 
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="../assets/css/main.css" />
 {{/if}} 
 
 
 
-<link rel="stylesheet" href="assets/css/modal.css" />
-<link rel="stylesheet" href="assets/css/featured.css" />
-<link rel="stylesheet" href="assets/css/about.css" />
+<link rel="stylesheet" href="../assets/css/modal.css" />
+<link rel="stylesheet" href="../assets/css/featured.css" />
+<link rel="stylesheet" href="../assets/css/about.css" />
 
 
 <!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/skel.min.js"></script>
-<script src="assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/jquery.scrollex.min.js"></script>
+<script src="../assets/js/jquery.scrolly.min.js"></script>
+<script src="../assets/js/skel.min.js"></script>
+<script src="../assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
 <!--<script language="javascript" src="./PropertySearch_files/soldSearch.js"></script>-->
@@ -101,9 +101,9 @@
 
 
 
-<!--<script src="assets/js/main.js"></script>-->
+<!--<script src="../assets/js/main.js"></script>-->
 
-<script src="assets/js/main.js"></script>
+<script src="../assets/js/main.js"></script>
 
 
 </body>
