--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2923,7 +2923,8 @@ body.is-menu-visible #menu {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10000;
+  /*z-index: 10000;*/
+  
 }
 #header h1 {
   -moz-transition: opacity 0.2s ease;
