--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Coelho Properties</title>
+<title>Coelho Realty</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -50,18 +50,18 @@
 <!-- Page Wrapper -->
 <div id="page-wrapper">
 
-  <header id="header" class="alt">
-    <h1><a href="./">Coelho Properties</a></h1>
+  <header id="header"  {{#if home}} class="alt" {{/if}}>
+    <h1><a href="./">Coelho Realty</a></h1>
     <nav id="nav">
       <ul>
 	<li class="special">
 	<a href="#menu" class="menuToggle"><span>Menu</span></a>
 	<div id="menu">
 	  <ul>
-	    <li><a href="./">Home</a></li>
-	    <li><a href="./featured">Featured</a></li>
-	    <li><a href="./about">About</a></li>											
-	    <li><a href="./contact">Contact</a></li>
+	    <li><a href="../">Home</a></li>
+	    <li><a href="../featured">Featured</a></li>
+	    <li><a href="../about">About</a></li>											
+	    <li><a href="../contact">Contact</a></li>
 	  </ul>
 	</div>
 	</li>
@@ -88,7 +88,7 @@
 
     </ul>
     <ul class="copyright">
-      <li>&copy; Coelho Properties</li><li><a href="#page-wrapper" class="scrolly ">Back to Top</a></li>
+      <li>&copy; Coelho Realty</li><li><a href="#page-wrapper" class="scrolly ">Back to Top</a></li>
     </ul>
   </footer>
 
