--- a/public/assets/css/details.css
+++ b/public/assets/css/details.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+img{
+  cursor:pointer;
+}
+
 body{
 
 }
@@ -53,7 +57,9 @@ td.Details {
   
 }
 
-
+.divThumb{
+  display:none;
+}
 table {
  /* width: 100%;
   margin:auto;
@@ -94,10 +100,13 @@ table {
   width:100%;
   height:400px;
   background-size:contain;*/
+  text-align: center;
 }
 #container img{
   width:66%;
   border: 1px solid white;
+  max-height:500px;
+  max-width:600px;
   
 }
 #description{ 
