--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,47 @@
+<div class="wrapper style5">
+    <div class="inner">
+    <style>
+        table td{
+            vertical-align:top;
+            float:left;
+            width: 96%;
+            padding: 0 5px;
+            text-align: justify;
+            
+            
+        }
+        td.ResultsHeading {
+            padding: 0 10px;
+        }
+        table img {
+            width: 100%;
+            object-fit: contain;
+        } 
+        .wrapper.style5 strong{
+            color:unset;
+        }
+        .idx:visited{
+            color:#ccc !important;
+        }
+        .wrapper.style5 {
+            padding: 0; 
+        }
+        @media (min-width: 600px) {
+            table td{                
+                float:none;
+                padding: 0.75em 0.75em;
+                
+            }
+        }
 
-{{{html}}} 
 
+        .ResultsHeading table td{
+            float:left;
+        }
+        img{
+            cursor:pointer;
+        }
+      
+    </style>
+    {{{html}}} 
+</div>
