--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
         <h2>Coelho Realty</h2>
         <p>The best real estate<br />
         in Massachusetts<br />
-        founded by <a href="./about.html">Emanuel</a>.</p>
+        founded by <a href="../about.html">Emanuel</a>.</p>
         <ul class="actions">
             <!--
             <li><a href="#" class="button special">Activate</a></li>
