--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,7 +51,7 @@
 <div id="page-wrapper">
 
   <header id="header"  {{#if home}} class="alt" {{/if}}>
-    <h1><a href="./">Coelho Realty</a></h1>
+    <h1><a href="../">Coelho Realty</a></h1>
     <nav id="nav">
       <ul>
 	<li class="special">
@@ -62,6 +62,8 @@
 	    <li><a href="../featured">Featured</a></li>
 	    <li><a href="../about">About</a></li>											
 	    <li><a href="../contact">Contact</a></li>
+	    <li><a href="../search">Search</a></li>
+	    
 	  </ul>
 	</div>
 	</li>
