--- a/views/featured.hbs
+++ b/views/featured.hbs
@@ -35,6 +35,6 @@
     </section>
 </article>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVCbPS40tAPyjYaLF3gXNtEz3mOARG5Wo&callback=initMap"></script>
-<script defer src="assets/js/gmap.js"></script>
+<script defer src="./assets/js/gmap.js"></script>
+<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVCbPS40tAPyjYaLF3gXNtEz3mOARG5Wo&callback=initMap"></script>
 
