--- a/views/details.hbs
+++ b/views/details.hbs
@@ -10,9 +10,11 @@
 
 -->
 <div class="wrapper style5">
+    
 <section id="container">
 
     <img src={{mainImage}} /> 
+    
     
     <section id="right-side-bar">
         <section id="details">
@@ -23,7 +25,10 @@
         </section>
 
     </section>
+    <button id="contact" class="btn special"> Contact Us About This Listing! </button>
+    
 </section> 
+
 
 <section id="description" class="inner">
     <p>{{text}}</p>
