--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <!-- Banner -->
 <section id="banner">
     <div class="inner">
-        <h2>Coelho Realty</h2>
+        <h2>Coelho Realty Group</h2>
         <p>The best real estate<br />
         in Massachusetts<br />
         founded by <a href="../about.html">Emanuel</a>.</p>
