--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Coelho Realty</title>
+<title>Coelho Realty Group</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="../assets/css/modal.css" />
 <link rel="stylesheet" href="../assets/css/featured.css" />
 <link rel="stylesheet" href="../assets/css/about.css" />
+<link rel="stylesheet" href="../assets/css/accordion.css" />
 
 
 <!-- Scripts -->
@@ -61,9 +62,10 @@
 	    <li><a href="../">Home</a></li>
 	    <li><a href="../featured">Featured</a></li>
 	    <li><a href="../about">About</a></li>											
-	    <li><a href="../contact">Contact</a></li>
-	    <li><a href="../search">Search</a></li>
-	    
+	    <li><a href="../buyers">Buyers</a></li>
+	    <li><a href="../sellers">Sellers</a></li>
+	    <li><a href="../search">Search</a></li>	  	    
+	    <li><a href="../contact">Contact</a></li>	    	    
 	  </ul>
 	</div>
 	</li>
