--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -52,7 +52,7 @@
 <div id="page-wrapper">
 
   <header id="header"  {{#if home}} class="alt" {{/if}}>
-    <h1><a href="../">Coelho Realty</a></h1>
+    <h1><a href="../">Coelho Realty Group</a></h1>
     <nav id="nav">
       <ul>
 	<li class="special">
