--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,8 +1,8 @@
 <!-- Main -->
 <article id="main">
     <header class="about">
-        <h2>About Us</h2>
-        <p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+        <h2>COELHO REALTY GROUP</h2>
+        <p>We are a leading-edge agency with a sharp understanding of the real estate business. We are setting the industry standards by providing the highest quality service, state-of-the-art marketing, consulting and in-depth knowledge.</p>
     </header>
 
 
@@ -11,10 +11,77 @@
 
 
             <section>
-                <h4>Image</h4>
-                <h5>Left &amp; Right</h5>
-                <p><span class="image left"><img src="images/biz1.jpg" alt="" /></span>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+                <h4>OWNER OPERATOR BROKER BIO</h4>
+                <h5>EMANUEL F. COELHO</h5>
+                <p><span class="image left"><img src="images/biz1.jpg" alt="" /></span>Emanuel F. Coelho founding partner of Coelho Realty Group, LLC and
+                principal broker. Mr. Coelho has been licensed and practicing Real Estate
+                since 2001, building along the way a database of clients as well as
+                developing a solid professional reputation in the industry. Mr. Coelho also
+                has two decades of experience in construction management and
+                development in the Boston area. Mr. Coelho is also partner owner of
+                Innovative Contracting Services Inc a full service exterior contracting
+                company in the Boston area. Mr. Coelho is currently holding a Construction
+                Supervisor and Construction management/contractor licenses. This provides
+                both sellers and buyer’s access to an unmatched degree of expertise in all
+                aspects of Real Estate purchases, sales and Real Estate development. Mr.
+                Coelho has also worked as a consultant for various construction regional
+                groups and currently is an active member of the Massachusetts Association
+                of Realtors (MAR) and the National Construction Trades Association (NCTA).
+                The value of more than twenty years in both Real Estate and Construction
+                experience to the consumer is invaluable in today’s complex and aggressive
+                Real Estate markets.</p>
                 <p><span class="image right"><img src="images/biz2.jpg" alt="" /></span>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat. Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui.</p>
+            </section>
+
+            <section>
+                <h4>About Us</h4>
+                <ul>
+                    <li>Full Service Brokerage Firm</li>
+                    <li>Sales</li>
+                    <li>Rentals</li>
+                    <li>Construction Development</li>
+                    <li>In House Real Estate Investment</li>
+                </ul>
+
+            </section>
+            <section>
+                <h4>Sellers</h4>
+                <p>At Coelho Realty Group we break away from traditional real estate by
+utilizing innovative marketing strategies, modern technology, and access to
+professional trades to obtain the highest possible sales price on the market.</p>
+                <ul>
+                    <li>Comprehensive Market Analysis with access to local licensed
+appraisers for complex appraising situations.</li>
+                    <li>Partnership with local area Real Estate attorneys to assist in the sales
+process.</li>
+                    <li>Professionally printed literature/brochures</li>
+                    <li>Access to local area design consultant/coordinator who manages your
+home preparation and unleashes your home’s full value</li>
+                    <li>Advantageous pricing from preferred vendors for any and all pre-
+market repairs/improvements</li>
+                    <li>Field coordinator (i.e., licensed contractor and/or handyman) service to
+prepare your home</li>
+                    <li>Marketing tools with print, online and extensive professional
+                    photos/virtual 3<sup>rd</sup> tours</li>
+                    <li>Open house/ staging capabilities with extended open house hours for
+optimal exposure</li>
+                </ul>
+            </section>
+            <section>
+                <h4>Buyers</h4>
+                <li><strong>Enhanced market knowledge -</strong> Our agents have advanced expertise within
+their specialized cities and neighborhoods</li>
+                <li><strong>Insights and Connections -</strong> Off market properties and relationships with
+local sales agents/brokers</li>
+                <li><strong>Mortgages &amp; Lending -</strong> Personal relationship with local banks and lenders to
+facilitate the buying process</li>
+                <li><strong>Detailed Deal-Structuring -</strong> Knowledge of complex negotiating tactics to find
+the best purchase price for our clients</li>
+                <li><strong>Step by Step Guidance -</strong> Streamlined process to guide buyers along the way</li>
+                <li><strong>Post-purchasing Assistance -</strong> Clients receive access to interior designers,
+handyman services, building contractors, and all other residential/
+commercial trades that may be needed</li>
+                
             </section>
 
         </div>
