--- a/views/featured.hbs
+++ b/views/featured.hbs
@@ -15,7 +15,7 @@
             <hr />
             <div class="box alt">
                 <div class="row uniform 50%">
-                    <div class="4u"><span class="image fit"><img src="./final/house2.jpg" alt=""></span></div>											
+                    <!--<div class="4u"><span class="image fit"><img src="./final/house2.jpg" alt=""></span></div>											
                     <div class="4u"><span class="image fit"><img src="./final/apt1.jpg" alt=""></span></div>
                     <div class="4u"><span class="image fit"><img src="./final/apt2.jpg" alt=""></span></div>
                     <div class="4u"><span class="image fit"><img src="./final/apt5.jpg" alt=""></span></div>
@@ -23,7 +23,18 @@
                     <div class="4u"><span class="image fit"><img src="./final/house3.jpg" alt=""></span></div>
                     <div class="4u"><span class="image fit"><img src="./final/apt3.jpg" alt=""></span></div>											
                     <div class="4u"><span class="image fit"><img src="./final/apt4.jpg" alt=""></span></div>											
-                    <div class="4u"><span class="image fit"><img src="./final/house5.jpg" alt=""></span></div>
+                    <div class="4u"><span class="image fit"><img src="./final/house5.jpg" alt=""></span></div>-->
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+                    <div class="4u"><span class="image fit"><img src="./images/comingsoon.jpg" alt=""></span></div>											
+<D-r>										
+                    
 
                 </div>
             </div>
