--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,7 @@
 <link rel="stylesheet" href="../assets/css/featured.css" />
 <link rel="stylesheet" href="../assets/css/about.css" />
 <link rel="stylesheet" href="../assets/css/accordion.css" />
+<link rel="stylesheet" href="../assets/css/search.css" />
 
 
 <!-- Scripts -->
