--- a/views/search-page.hbs
+++ b/views/search-page.hbs
@@ -1,7 +1,8 @@
 <!-- Banner -->
 
 <article id="main">
-    <section class="wrapper style5">
+
+    <section class="wrapper style5 search">
         <div class="inner">
         <ul class="actions">
 
