--- a/public/assets/css/featured.css
+++ b/public/assets/css/featured.css
@@ -5,7 +5,7 @@
 }
 
 #main > header {
-    background:url('../../images/house-banner.jpg');
+    background:url('../../images/featured.jpg');
     background-size:cover;
     background-repeat:no-repeat;
     background-position:bottom;
@@ -22,11 +22,15 @@ span.image.fit::before{
     padding:10px;
     height:0; 
     text-align:center;
-    content: '$$$$$';
+    content: 'Coming Soon!';
     position: absolute;
     bottom: 0;
     width: 100%;
 
+}
+
+h2{
+    
 }
 
 span.image.fit:hover::before {
