--- a/public/assets/css/featured.css
+++ b/public/assets/css/featured.css
@@ -5,7 +5,11 @@
 }
 
 #main > header {
-    background:url('../../images/featured.jpg');
+
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/featured.jpg");
+    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/featured.jpg");
+    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/featured.jpg");
+    background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../../images/featured.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     background-position:bottom;
