--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,7 +45,7 @@
 <!--<script language="javascript" src="./PropertySearch_files/soldSearch.js"></script>-->
 
 
-<body {{#if home}} class="landing" {{/if}}>
+<body {{#if home}} class="landing is-loading" {{/if}}>
 
 
 
