--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -709,6 +709,7 @@ body.is-mobile.landing .wrapper.style4 {
   background-size: cover;
 }
 
+/*
 #one.button.icon.special.fa-search{
   display:none;
   background-color: #8a221b;
@@ -723,6 +724,7 @@ body.is-mobile.landing .wrapper.style4 {
 }
 
  
+*/
 
 #logo{
   width:100%;
