--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,15 +8,17 @@
         in Massachusetts<br />
         founded by <a href="../about.html">Emanuel</a>.</p>
         -->
-        <ul class="actions" >
             <!--
+        
+        <ul class="actions" >
             <li><a href="#" class="button special">Activate</a></li>
             -->
+            <!--
             <div class="content" >
                 <div class="buttons">
                     <div id="one" class="button icon special fa-search">Find A Home</div>
               </div>
-            </div>
+            </div>-->
 
             <div class='search'>
                 {{> search}} 
