--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,10 +34,10 @@
 <section id="one" class="wrapper style1 special">
     <div class="inner">
         <header class="major">
-            <h2>Arcu aliquet vel lobortis ata nisl<br />
-            eget augue amet aliquet nisl cep donec</h2>
-            <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-            fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+            <h2> The highest quality service, <br /> state-of-the-art marketing, and in-depth knowledge.</h2>
+            <p>At Coelho Realty Group we break away from traditional real estate by
+            utilizing innovative marketing strategies, modern technology,<br /> and access to
+professional trades to obtain the highest possible sales price on the market.</p>
             
         </header>
         <ul class="icons major">
@@ -52,28 +52,30 @@
 <section id="two" class="wrapper alt style2">
     <section class="spotlight">
         <div class="image"><img src="images/house.jpg" alt="" /></div><div class="content">
-            <h2>Magna primis lobortis<br />
-            sed ullamcorper</h2>
-            <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+            <h2>Enhanced market <br />
+             knowledge</h2>
+            <p>Our agents have advanced expertise within
+their specialized cities and neighborhoods.</p>
         </div>
     </section>
     <section class="spotlight">
         <div class="image"><img src="images/boston.jpg" alt="" /></div><div class="content">
-            <h2>Tortor dolore feugiat<br />
-            elementum magna</h2>
-            <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+            <h2>Insights and <br />
+            Connections</h2>
+            <p> Off market properties and relationships with
+local sales agents/brokers.</p>
         </div>
     </section>
     <section class="spotlight">
         <div class="image"><img src="images/apt.jpg" alt="" /></div><div class="content">
-            <h2>Augue eleifend aliquet<br />
-            sed condimentum</h2>
-            <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+            <h2>Step by Step <br />
+            Guidance</h2>
+            <p>Streamlined process to guide buyers along the way.</p>
         </div>
     </section>
 </section>
 
-<!-- Three -->
+<!-- Three 
 <section id="three" class="wrapper style3 special">
     <div class="inner">
         <header class="major">
@@ -109,13 +111,13 @@
         </ul>
     </div>
 </section>
-
+-->
 <!-- CTA -->
 <section id="cta" class="wrapper style4">
     <div class="inner">
         <header>
-            <h2>Arcue ut vel commodo</h2>
-            <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+            <h2>Get Started Today</h2>
+            <p>Search our wide range of quality homes.</p>
         </header>
         <ul class="actions vertical">
 
