--- a/views/about.hbs
+++ b/views/about.hbs
@@ -13,7 +13,7 @@
             <section>
                 <h4>OWNER OPERATOR BROKER BIO</h4>
                 <h5>EMANUEL F. COELHO</h5>
-                <p><span class="image left"><img src="images/selfphoto.png" alt="" /></span>Emanuel F. Coelho founding partner of Coelho Realty Group, LLC and
+                <p class="descriptionCoelho"><span class="image left"><img src="images/selfphoto.png" alt="" /></span>Emanuel F. Coelho founding partner of Coelho Realty Group, LLC and
                 principal broker. Mr. Coelho has been licensed and practicing Real Estate
                 since 2001, building along the way a database of clients as well as
                 developing a solid professional reputation in the industry. Mr. Coelho also
